<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/llmain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:src="@drawable/body_mass_index"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bmi_calculator"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textSize="28sp"/>

    <EditText
        android:id="@+id/edtWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:drawableStart="@drawable/ic_weight"
        android:drawableLeft="@drawable/ic_weight"
        android:drawablePadding="10dp"
        android:padding="15dp"
        android:ems="10"
        android:hint="@string/hint_wt"
        android:inputType="number"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/edtHeightFt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:drawablePadding="10dp"
        android:padding="15dp"
        android:ems="10"
        android:hint="@string/hint_htF"
        android:inputType="number"
        android:drawableStart="@drawable/ic_height"
        android:drawableLeft="@drawable/ic_height"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/edtHeightIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:drawablePadding="10dp"
        android:padding="15dp"
        android:ems="10"
        android:hint="@string/hint_htI"
        android:inputType="number"
        android:drawableStart="@drawable/ic_height"
        android:drawableLeft="@drawable/ic_height"
        tools:ignore="Autofill" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCalculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cornerRadius="10dp"
        android:text="@string/calculate_bmi"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:backgroundTint="@color/colorBtn"
        tools:ignore="UnusedAttribute" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtResult"
        android:text="@string/result"
        android:layout_gravity="center"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_marginTop="11dp"/>

</LinearLayout>